name:                behave-hs
version:             0.1.0.0
synopsis:            Haskell implementation of the BEHAVE algorithms
-- description:         
homepage:            https://github.com/meteogrid/behave-hs
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@meteogrid.com
copyright:           2015 Alberto Valverde
category:            Scientific
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag herbie
  description: Enable `herbie`.
  default: False
  manual: True


library
  exposed-modules:     Behave
                     , Behave.Units
  other-modules:       Behave.Types
  build-depends:       base >=4.8 && <5
                     , text
                     , vector >= 0.11
                     , hybrid-vectors
                     , vector-th-unbox >= 0.2.1.3
                     , dimensional >= 0.8.0.2
                     , hashable
                     , numtype-dk
                     , lens
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    ghc-options: -fplugin=Herbie
    cpp-options: -DHERBIE

test-suite behave-spec
  type:                exitcode-stdio-1.0
  build-depends:   
                       base
                     , behave-hs
                     , hspec
                     , QuickCheck
                     , inline-c
                     , dimensional
  other-modules:       HsFirelib
                     , Arbitrary
                     , BehaveSpec
  ghc-options:         -Wall -rtsopts
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
  hs-source-dirs:      test
  c-sources:           test/HsFirelib.c test/fireLib.c
  cc-options:          -Wall
  main-is:             Spec.hs
  default-language:    Haskell2010

  if impl(ghcjs)
    buildable: False

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench test
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , behave-hs
                     , QuickCheck
                     , dimensional
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns

executable prueba
  build-depends:   
                       base
                     , behave-hs
                     , QuickCheck
                     , dimensional
                     , vector
                     , timeit
                     , deepseq
  other-modules:       Arbitrary
  ghc-options:         -Wall -rtsopts
  hs-source-dirs:      test
  cc-options:          -Wall
  main-is:             Prueba.hs
  default-language:    Haskell2010
