name:                behave-hs
version:             0.1.0.0
synopsis:            Haskell implementation of the BEHAVE algorithms
-- description:         
homepage:            https://github.com/albertov/behave-hs
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@toscat.net
copyright:           2015-2016 Alberto Valverde
category:            Scientific
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag herbie
  description: Enable `herbie`.
  default: False
  manual: True


library
  exposed-modules:     Behave
                     , Behave.Units
  other-modules:       Behave.Types
  build-depends:       base                              >= 4.8    && <5
                     , data-default                      >= 0.7.1  && < 0.8
                     , deepseq                           >= 1.4.2  && < 1.5
                     , dimensional                       >= 1.0.1  && < 1.1
                     , numtype-dk                        >= 0.5.0  && < 0.6
                     , vector                            >= 0.11.0 && < 0.13
                     , text                              >= 1.2.2  && < 1.3
                     , lens                              >= 4.14   && < 4.16
                     , vector-th-unbox                   >= 0.2.1  && < 0.3
                     , QuickCheck                        >= 2.8.2  && < 2.11
                     , timeit                            >= 1.0.0  && < 1.1
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    ghc-options: -fplugin=Herbie
    cpp-options: -DHERBIE

test-suite behave-spec
  type:                exitcode-stdio-1.0
  build-depends:   
                       base
                     , behave-hs
                     , hspec
                     , QuickCheck
                     , inline-c >= 0.6.0.5
                     , dimensional
  other-modules:       HsFirelib
                     , Arbitrary
                     , BehaveSpec
  ghc-options:         -Wall -rtsopts
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
  hs-source-dirs:      test
  c-sources:           test/fireLib.c
  cc-options:          -Wall
  main-is:             Spec.hs
  default-language:    Haskell2010

  if impl(ghcjs)
    buildable: False

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench test
  main-is:             Main.hs
  build-depends:       base
                     , criterion
                     , behave-hs
                     , QuickCheck
                     , dimensional
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
